[gd_scene load_steps=51 format=3 uid="uid://bpmpxl6sp43f2"]

[ext_resource type="Script" path="res://scripts/mushroom.gd" id="1_ih1rr"]
[ext_resource type="Texture2D" uid="uid://bo5s3bqhidqme" path="res://assets/sprites/skeleton/Idle.png" id="2_lypfb"]
[ext_resource type="Texture2D" uid="uid://dojw4g68x67e3" path="res://assets/sprites/mushroom/Attack.png" id="3_lwca4"]
[ext_resource type="Texture2D" uid="uid://cb2dhqlys24nf" path="res://assets/sprites/mushroom/Attack2.png" id="4_mywki"]
[ext_resource type="Texture2D" uid="uid://bfcukikmt0ufq" path="res://assets/sprites/mushroom/Attack3.png" id="5_hh5vv"]
[ext_resource type="Texture2D" uid="uid://bnsbaep38kgrr" path="res://assets/sprites/mushroom/Death.png" id="6_1magl"]
[ext_resource type="Texture2D" uid="uid://dta0avd2n72ky" path="res://assets/sprites/mushroom/Take Hit.png" id="7_addpi"]
[ext_resource type="Texture2D" uid="uid://b6tyakk6hdrlm" path="res://assets/sprites/mushroom/Idle.png" id="8_7p0b6"]
[ext_resource type="Texture2D" uid="uid://bbadop2jii0ws" path="res://assets/sprites/mushroom/Run.png" id="9_7v3jh"]
[ext_resource type="Script" path="res://scripts/animation_state_machine.gd" id="10_jpy2s"]
[ext_resource type="Script" path="res://scripts/mushroom_state_walk.gd" id="11_sn7j8"]
[ext_resource type="Script" path="res://scripts/mushroom_state_hit.gd" id="12_iycbf"]
[ext_resource type="AudioStream" uid="uid://d23j5lqitpo3b" path="res://assets/sounds/mushroom/03_Claw_03.wav" id="13_fnnlh"]
[ext_resource type="Script" path="res://scripts/mushroom_state_death.gd" id="14_funig"]
[ext_resource type="AudioStream" uid="uid://da7nstahses5o" path="res://assets/sounds/mushroom/24_orc_death_spin.wav" id="15_khiiv"]
[ext_resource type="Script" path="res://scripts/mushroom_state_attack.gd" id="16_b8eq1"]
[ext_resource type="AudioStream" uid="uid://wyntj1l875ml" path="res://assets/sounds/mushroom/77_flesh_02.wav" id="17_nj3nm"]
[ext_resource type="Script" path="res://scripts/animation_state_debug.gd" id="18_ib0mb"]
[ext_resource type="Script" path="res://scripts/x_attack_area.gd" id="19_phfj8"]
[ext_resource type="Script" path="res://scripts/x_damageable.gd" id="20_wvo0v"]
[ext_resource type="Script" path="res://scripts/x_detect_player.gd" id="21_p0bq2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2brdd"]
radius = 9.0
height = 34.0

[sub_resource type="Animation" id="Animation_wwqui"]
resource_name = "Attack_1"
length = 0.56
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_lwca4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackArea2D:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.428571, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackArea2D/CollisionPolygon2DAttack_1:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.428571, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AttackArea2D/CollisionPolygon2DAttack_2:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_c5kco"]
resource_name = "Attack_2"
length = 0.56
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_mywki")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackArea2D:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.428571, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackArea2D/CollisionPolygon2DAttack_2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.428571, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AttackArea2D/CollisionPolygon2DAttack_1:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dvknp"]
resource_name = "Attack_3"
length = 0.77
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_hh5vv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49, 0.56, 0.63, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_4yu8w"]
resource_name = "Death"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_1magl")]
}

[sub_resource type="Animation" id="Animation_rb4mw"]
resource_name = "Hit"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_addpi")]
}

[sub_resource type="Animation" id="Animation_5wgk2"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_7p0b6")]
}

[sub_resource type="Animation" id="Animation_5nv80"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("2_lypfb")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackArea2D:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackArea2D/CollisionPolygon2DAttack_1:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AttackArea2D/CollisionPolygon2DAttack_2:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="Animation_o5oms"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_7v3jh")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pqq1w"]
_data = {
"Attack_1": SubResource("Animation_wwqui"),
"Attack_2": SubResource("Animation_c5kco"),
"Attack_3": SubResource("Animation_dvknp"),
"Death": SubResource("Animation_4yu8w"),
"Hit": SubResource("Animation_rb4mw"),
"Idle": SubResource("Animation_5wgk2"),
"RESET": SubResource("Animation_5nv80"),
"Walk": SubResource("Animation_o5oms")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_luipx"]
animation = &"Attack_1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_owpne"]
animation = &"Attack_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_shq1j"]
animation = &"Attack_3"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c6swx"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dao7i"]
animation = &"Hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u0dee"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7sass"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6o7tw"]
animation = &"Idle"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_k7apw"]
blend_point_0/node = SubResource("AnimationNodeAnimation_u0dee")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_7sass")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_6o7tw")
blend_point_2/pos = 0.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hng8u"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2ecpa"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q6sh1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xlnh7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_65dit"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_13dfh"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cvlop"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_410v0"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_gqg5k"]
states/Attack_1/node = SubResource("AnimationNodeAnimation_luipx")
states/Attack_1/position = Vector2(564.228, -112.662)
states/Attack_2/node = SubResource("AnimationNodeAnimation_owpne")
states/Attack_2/position = Vector2(699.046, -261.798)
states/Attack_3/node = SubResource("AnimationNodeAnimation_shq1j")
states/Attack_3/position = Vector2(565.097, -408.188)
states/Death/node = SubResource("AnimationNodeAnimation_c6swx")
states/Death/position = Vector2(198.875, -262.472)
states/End/position = Vector2(563.864, 99.2125)
states/Hit/node = SubResource("AnimationNodeAnimation_dao7i")
states/Hit/position = Vector2(197.75, -110.767)
states/Move/node = SubResource("AnimationNodeBlendSpace1D_k7apw")
states/Move/position = Vector2(378.5, 98.425)
transitions = ["Hit", "Death", SubResource("AnimationNodeStateMachineTransition_hng8u"), "Start", "Move", SubResource("AnimationNodeStateMachineTransition_2ecpa"), "Hit", "Move", SubResource("AnimationNodeStateMachineTransition_q6sh1"), "Move", "Attack_1", SubResource("AnimationNodeStateMachineTransition_xlnh7"), "Attack_1", "Attack_2", SubResource("AnimationNodeStateMachineTransition_65dit"), "Attack_2", "Attack_3", SubResource("AnimationNodeStateMachineTransition_13dfh"), "Attack_1", "Attack_3", SubResource("AnimationNodeStateMachineTransition_cvlop"), "Attack_2", "Attack_1", SubResource("AnimationNodeStateMachineTransition_410v0")]
graph_offset = Vector2(160.095, -26.8593)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sv6c7"]
size = Vector2(11.1875, 34.125)

[node name="Mushroom" type="CharacterBody2D" node_paths=PackedStringArray("animation_state_machine", "animation_tree", "sprite_2d", "area_2d_attack_area", "area_2d_detect_player", "ray_cast_2d", "ray_cast_2d2")]
position = Vector2(0, -26)
collision_layer = 4
script = ExtResource("1_ih1rr")
animation_state_machine = NodePath("AnimationStateMachine")
animation_tree = NodePath("AnimationTree")
sprite_2d = NodePath("Sprite2D")
area_2d_attack_area = NodePath("AttackArea2D")
area_2d_detect_player = NodePath("DetectPlayerArea2D")
ray_cast_2d = NodePath("RayCast2D")
ray_cast_2d2 = NodePath("RayCast2D2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("CapsuleShape2D_2brdd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_lypfb")
region_rect = Rect2(0, 0, 600, 150)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pqq1w")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_gqg5k")
anim_player = NodePath("../AnimationPlayer")
parameters/Move/blend_position = 0.0

[node name="AnimationStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state", "character_body_2d", "animation_tree", "damageable")]
script = ExtResource("10_jpy2s")
current_state = NodePath("Walk")
character_body_2d = NodePath("..")
animation_tree = NodePath("../AnimationTree")
damageable = NodePath("../Damageable")

[node name="Walk" type="Node" parent="AnimationStateMachine" node_paths=PackedStringArray("animation_state_machine")]
script = ExtResource("11_sn7j8")
animation_state_machine = NodePath("..")

[node name="Hit" type="Node" parent="AnimationStateMachine" node_paths=PackedStringArray("damageable", "walk", "death", "attack", "area_2d", "animation_state_machine")]
script = ExtResource("12_iycbf")
damageable = NodePath("../../Damageable")
walk = NodePath("../Walk")
death = NodePath("../Death")
attack = NodePath("../Attack")
area_2d = NodePath("../../DetectPlayerArea2D")
can_move = false
animation_state_machine = NodePath("..")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AnimationStateMachine/Hit"]
stream = ExtResource("13_fnnlh")
panning_strength = 0.0

[node name="Death" type="Node" parent="AnimationStateMachine" node_paths=PackedStringArray("animation_state_machine")]
script = ExtResource("14_funig")
can_move = false
animation_state_machine = NodePath("..")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AnimationStateMachine/Death"]
stream = ExtResource("15_khiiv")
volume_db = -5.0
panning_strength = 0.0

[node name="Attack" type="Node" parent="AnimationStateMachine" node_paths=PackedStringArray("area_2d", "walk", "animation_state_machine")]
script = ExtResource("16_b8eq1")
area_2d = NodePath("../../DetectPlayerArea2D")
walk = NodePath("../Walk")
can_move = false
animation_state_machine = NodePath("..")

[node name="Timer" type="Timer" parent="AnimationStateMachine/Attack"]
wait_time = 0.42
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AnimationStateMachine/Attack"]
stream = ExtResource("17_nj3nm")
panning_strength = 0.0

[node name="AnimationDebug" type="Label" parent="." node_paths=PackedStringArray("animation_state_machine")]
visible = false
offset_top = -40.0
offset_right = 49.0
offset_bottom = -26.0
theme_override_font_sizes/font_size = 10
text = "State: Idle"
script = ExtResource("18_ib0mb")
animation_state_machine = NodePath("../AnimationStateMachine")

[node name="AttackArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false
script = ExtResource("19_phfj8")

[node name="CollisionPolygon2DAttack_1" type="CollisionPolygon2D" parent="AttackArea2D"]
visible = false
polygon = PackedVector2Array(29, 0, 32, 7, 31, 16, 22, 21, 14, 13, 14, 5, 16, -1)
disabled = true

[node name="CollisionPolygon2DAttack_2" type="CollisionPolygon2D" parent="AttackArea2D"]
visible = false
polygon = PackedVector2Array(22, 0, 30, -6, 35, 1, 34, 10, 25, 15, 17, 8)

[node name="Damageable" type="Node2D" parent="." node_paths=PackedStringArray("label", "timer", "hit", "character_body_2d", "animation_state_machine")]
script = ExtResource("20_wvo0v")
label = NodePath("Label")
timer = NodePath("Timer")
hit = NodePath("../AnimationStateMachine/Hit")
character_body_2d = NodePath("..")
knockback = Vector2(300, 0)
animation_state_machine = NodePath("../AnimationStateMachine")

[node name="Label" type="Label" parent="Damageable"]
offset_top = -40.0
offset_right = 13.0
offset_bottom = -26.0
theme_override_font_sizes/font_size = 10
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="Damageable"]
wait_time = 0.2
one_shot = true

[node name="DetectPlayerArea2D" type="Area2D" parent="." node_paths=PackedStringArray("damageable", "attack", "animation_state_machine", "ray_cast_2d", "ray_cast_projectile_2d")]
collision_layer = 0
collision_mask = 2
script = ExtResource("21_p0bq2")
damageable = NodePath("../Damageable")
attack = NodePath("../AnimationStateMachine/Attack")
animation_state_machine = NodePath("../AnimationStateMachine")
ray_cast_2d = NodePath("RayCast2D")
ray_cast_projectile_2d = NodePath("RayCast2DProjectile")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayerArea2D"]
position = Vector2(5.40625, 9.063)
shape = SubResource("RectangleShape2D_sv6c7")
debug_color = Color(0.984314, 0, 0.337255, 0.0470588)

[node name="RayCast2D" type="RayCast2D" parent="DetectPlayerArea2D"]
position = Vector2(0, 9)
target_position = Vector2(24, 0)
collision_mask = 2

[node name="RayCast2DProjectile" type="RayCast2D" parent="DetectPlayerArea2D"]
position = Vector2(0, 9)
target_position = Vector2(50, 0)
collision_mask = 2

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(20, 30)

[node name="RayCast2D2" type="RayCast2D" parent="."]
target_position = Vector2(20, 26)

[node name="Static" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_1magl")
hframes = 4
frame = 3

[connection signal="animation_finished" from="AnimationTree" to="AnimationStateMachine/Hit" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="AnimationStateMachine/Death" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="AnimationStateMachine/Attack" method="_on_animation_tree_animation_finished"]
[connection signal="animation_started" from="AnimationTree" to="AnimationStateMachine/Hit" method="_on_animation_tree_animation_started"]
[connection signal="animation_started" from="AnimationTree" to="AnimationStateMachine/Death" method="_on_animation_tree_animation_started"]
[connection signal="animation_started" from="AnimationTree" to="AnimationStateMachine/Attack" method="_on_animation_tree_animation_started"]
[connection signal="timeout" from="AnimationStateMachine/Attack/Timer" to="AnimationStateMachine/Attack" method="_on_timer_timeout"]
[connection signal="body_entered" from="AttackArea2D" to="AttackArea2D" method="_on_body_entered"]
[connection signal="timeout" from="Damageable/Timer" to="Damageable" method="_on_timer_timeout"]
[connection signal="body_entered" from="DetectPlayerArea2D" to="DetectPlayerArea2D" method="_on_body_entered"]
[connection signal="body_exited" from="DetectPlayerArea2D" to="DetectPlayerArea2D" method="_on_body_exited"]
